--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <th>Email</th>
             <th>Password</th>
             <th>Dob</th>
-            <th>Accepted terms</th>
+            <th>Accepted terms?</th>
           </tr>
         </thead>
         <tbody></tbody>
